Modified deploy script to only build for AMD64 architecture. Changed setup_cross.sh to deploy.sh. Added compile.sh to be used on different architectures.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,32 +17,19 @@ jobs:
             - name: Generate version text file
               run: git describe --tag > quit-version.txt
 
-            # Set an environment variable to the tag we want to use to describe this release.
-            - name: Get tag environment variable.
-              run: echo "RELEASE_VERSION=$(git describe --tag | sed s/v// | sed -E s/[\.]/\\\\\./g)" >> $GITHUB_OUTPUT
-              id: release-version
-
             # Set an environment variable to the tag we want to use to describe this release for file naming purposes
             - name: Get tag environment variable.
-              run: echo "FILE_RELEASE_VERSION=$(git describe --tag)" >> $GITHUB_OUTPUT
-              id: release-version-actual
-
-            - name: Replace Cargo.toml version with tag.
-              run: sed -i -E '0,/^version.*$/{s/^version.*$/version = "${{ steps.release-version.outputs.RELEASE_VERSION }}"/}' Cargo.toml
+              run: echo "RELEASE_VERSION=$(git describe --tag)" >> $GITHUB_OUTPUT
+              id: release-version
 
             # Install dependencies
-            - name: Install dependencies & build amd64 (x86_64) and armv7 versions of the software for linux.
-              run: chmod +x ./setup_cross.sh && ./setup_cross.sh
-
-            - name: Tar the version and executable files for armv7
-              run: tar -cvf armv7-linux-${{ steps.release-version-actual.outputs.FILE_RELEASE_VERSION }}.tar -C target/armv7-unknown-linux-gnueabihf/release/ chronokeep-portal-quit ../../../quit-version.txt
-            - name: Zip armv7 tar
-              run: gzip armv7-linux-${{ steps.release-version-actual.outputs.FILE_RELEASE_VERSION }}.tar
+            - name: Install dependencies & build software for amd64.
+              run: chmod +x ./deploy.sh && ./deploy.sh
 
             - name: Tar the version and executable files for amd64
-              run: tar -cvf amd64-linux-${{ steps.release-version-actual.outputs.FILE_RELEASE_VERSION }}.tar -C target/release/ chronokeep-portal-quit ../../quit-version.txt
+              run: tar -cvf amd64-linux-${{ steps.release-version.outputs.RELEASE_VERSION }}.tar -C target/release/ chronokeep-portal-quit ../../quit-version.txt
             - name: Zip amd64 tar
-              run: gzip amd64-linux-${{ steps.release-version-actual.outputs.FILE_RELEASE_VERSION }}.tar
+              run: gzip amd64-linux-${{ steps.release-version.outputs.RELEASE_VERSION }}.tar
                 
             - name: Create release
               id: create_release
@@ -50,18 +37,11 @@ jobs:
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
-                tag: ${{ steps.release-version-actual.outputs.FILE_RELEASE_VERSION }}
+                tag: ${{ steps.release-version.outputs.RELEASE_VERSION }}
 
-            - name: Update release asset armv7
-              id: upload-release-asset-armv7
+            - name: Update release asset
+              id: upload-release-asset
               uses: svenstaro/upload-release-action@v2
               with:
                 repo_token: ${{ secrets.GITHUB_TOKEN }}
-                file: armv7-linux-${{ steps.release-version-actual.outputs.FILE_RELEASE_VERSION }}.tar.gz
-
-            - name: Update release asset amd64
-              id: upload-release-asset-amd64
-              uses: svenstaro/upload-release-action@v2
-              with:
-                repo_token: ${{ secrets.GITHUB_TOKEN }}
-                file: amd64-linux-${{ steps.release-version-actual.outputs.FILE_RELEASE_VERSION }}.tar.gz
+                file: amd64-linux-${{ steps.release-version.outputs.RELEASE_VERSION }}.tar.gz
