Adding cross compiling back to the deploy script.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,16 @@ jobs:
               run: tar -cvf amd64-linux-${{ steps.release-version.outputs.RELEASE_VERSION }}.tar -C target/release/ chronokeep-portal-quit ../../quit-version.txt
             - name: Zip amd64 tar
               run: gzip amd64-linux-${{ steps.release-version.outputs.RELEASE_VERSION }}.tar
+
+            - name: Tar the version and executable files for aarch64
+              run: tar -cvf aarch64-linux-${{ steps.release-version.outputs.RELEASE_VERSION }}.tar -C target/aarch64-unknown-linux-gnu/release/ chronokeep-portal-quit ../../../quit-version.txt
+            - name: Zip aarch64 tar
+              run: gzip aarch64-linux-${{ steps.release-version.outputs.RELEASE_VERSION }}.tar
+
+            - name: Tar the version and executable files for armv7
+              run: tar -cvf armv7-linux-${{ steps.release-version.outputs.RELEASE_VERSION }}.tar -C target/armv7-unknown-linux-gnueabihf/release/ chronokeep-portal-quit ../../../quit-version.txt
+            - name: Zip armv7 tar
+              run: gzip armv7-linux-${{ steps.release-version.outputs.RELEASE_VERSION }}.tar
                 
             - name: Create release
               id: create_release
@@ -40,8 +50,22 @@ jobs:
                 tag: ${{ steps.release-version.outputs.RELEASE_VERSION }}
 
             - name: Update release asset
-              id: upload-release-asset
+              id: upload-release-asset-amd64
               uses: svenstaro/upload-release-action@v2
               with:
                 repo_token: ${{ secrets.GITHUB_TOKEN }}
                 file: amd64-linux-${{ steps.release-version.outputs.RELEASE_VERSION }}.tar.gz
+
+            - name: Update release asset aarch64
+              id: upload-release-asset-aarch64
+              uses: svenstaro/upload-release-action@v2
+              with:
+                repo_token: ${{ secrets.GITHUB_TOKEN }}
+                file: aarch64-linux-${{ steps.release-version.outputs.RELEASE_VERSION }}.tar.gz
+
+            - name: Update release asset armv7
+              id: upload-release-asset-armv7
+              uses: svenstaro/upload-release-action@v2
+              with:
+                repo_token: ${{ secrets.GITHUB_TOKEN }}
+                file: armv7-linux-${{ steps.release-version.outputs.RELEASE_VERSION }}.tar.gz
